# nushell

crates/nu-cmd-extra/src/extra/filters/: update_cells.rs
crates/nu-cmd-extra/tests/commands/: mod.rs
crates/nu-cmd-extra/tests/commands/filters/: mod.rs  update_cells.rs
crates/nu-command/: Cargo.toml
crates/nu-command/src/filesystem/: glob.rs
crates/nu-command/src/strings/str_/: substring.rs
crates/nu-glob2/: Cargo.toml
crates/nu-glob2/src/: compiler.rs  globber.rs  lib.rs  main.rs  matcher.rs  parser.rs
crates/nu-glob2/src/error/: mod.rs
