[package]
name = "nu-glob2"
version = "0.105.1"
edition = "2021"

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.105.1" }
nu-path = { path = "../nu-path", version = "0.105.1" }
log = { workspace = true }
rayon = { workspace = true }
miette = { workspace = true }
thiserror = "1.0.69"
